# SD6InternalVariability

./: .gitignore  README.md  pyproject.toml
code/: anova_analysis.py  anova_run.py  anova_run.sh  anova_run_submit.sh  anova_utils.py  calibration.py  create_input_pkl.py  exp4_anova_compute_output_y.py  exp4_anova_scenarios.py  gen_scenario_index.py  oat_analysis.py  oat_run_with_joblib.py  plotting.py  pre_scenario_generation.R  scenario_generation_initB.R  scenario_generation_initCorn.R  utils.R  utils.py
data/: Data_SD6_2012_2022.csv  KFMA_crop_income.csv  PDIV_WaterUse_1990_2022.csv  PDIV_Well_Info.csv  SD6_grid_info.csv  SD6_grid_info_selected.csv  prec_D_cm_1990_2023.csv  prec_avg_2003_2022.csv  prec_avg_2011_2022.csv
figures/code_for_plotting/: fig1_elements.py  fig3_S3_oat_heatmaps.py  fig4_5_anova.py  figS1_S2_B_derivation.py  figS4_survey_analysis.py  figS5_anova.py
figures/data_for_plotting/: df_ST_regime_norm.csv  df_Wi_regime_norm.csv  fig3_oat_df_rank.csv  (+2 more)
inputs/: Inputs_SD6_2012_2022.pkl  Scenarios_SD6_2003_2022.pkl
models/: PSO_it99.pkl  calibrated_model.pkl  calibrated_model_df_agt.csv  calibrated_model_df_sys.csv  calibrated_parameters.txt  sd6_B_glm_ig_2011.RData  sd6_corn_glm_2011.RData
scenarios/: anova_C0.497000_Rseed3256.csv  anova_C0.521800_Rseed3256.csv  anova_C0.546600_Rseed3256.csv  anova_C0.571300_Rseed3256.csv  anova_C0.596100_Rseed3256.csv  anova_C0.620900_Rseed3256.csv  anova_C0.645700_Rseed3256.csv  anova_C0.670400_Rseed3256.csv  anova_C0.695200_Rseed3256.csv  anova_C0.720000_Rseed3256.csv  oat_corn_dist_Rseed3256.csv
(+514 files in other folders)
